# unsubscribe

./: Makefile  README.md  main.py  pyproject.toml
unsubscribe/: main.py
